--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -224,6 +224,7 @@
   "nftName": "Name",
   "nftSymbol": "Symbol",
   "nftAboutCollectible": "About collectible",
+  "nftCollectibles": "Collectibles",
   "nftImageUrl": "Image URL",
   "nftChooseTitle": "Choose tittle",
   "nftNumberOfGroups": "Number of Groups",
@@ -231,6 +232,7 @@
   "nftTxId": "TxID",
   "nftUtf8": "UTF-8",
   "nftUrl": "URL",
+  "nftItems": "{count,plural, =1{item} other{in {count} items}}",
   "nftJson": "JSON",
   "nftStartDate": "Start Date",
   "nftStartDateDesc": "Sart at least 5 minutes after you submit this form.",
