--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -190,7 +190,7 @@
   "transactionsNoOutputs": "No output UTXOs found for this transaction.",
   "transactionsGasUsedByTransaction": "Gas Used by Transaction",
   "earnDelegateDescription": "You do not own an EZChain node, but you want to stake using another node.",
-  "earnDelegateValidMess": "You must have at least 1 EZC on the P chain to become a validator.",
+  "earnDelegateValidMess": "You must have at least 25 EZC on the P chain to become a delegator.",
   "earnDelegateAdd": "Add Delegator",
   "earnDelegateBackToEarn": "Back to Earn",
   "earnDelegateInvalidEndDate": "Invalid end date",
@@ -232,7 +232,7 @@
   "nftTxId": "TxID",
   "nftUtf8": "UTF-8",
   "nftUrl": "URL",
-  "nftItems": "{count,plural, =1{item} other{in {count} items}}",
+  "nftItems": "{count,plural, =1{1 item} other{{count} items}}",
   "nftJson": "JSON",
   "nftStartDate": "Start Date",
   "nftStartDateDesc": "Sart at least 5 minutes after you submit this form.",
@@ -246,5 +246,6 @@
   "nftNumberLengthError": "Number of groups must be at least 1.",
   "nftQuantityValidateError": "Quantity must be at least 1.",
   "nftPayload": "Payload (MAX 1024 characters)",
-  "nftJsonPayload": "JSON Payload (MAX 1024 characters)"
+  "nftJsonPayload": "JSON Payload (MAX 1024 characters)",
+  "nftSearchHint": "Search Assets"
 }
