--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -69,7 +69,7 @@
   "sharedResult": "Result",
   "sharedStatus": "Status",
   "sharedBlock": "Block",
-  "sharedFrom": "Form",
+  "sharedFrom": "From",
   "sharedTo": "To",
   "sharedFee": "Fee",
   "sharedGasPrice": "Gas Price",
