update advance gas price

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -159,6 +159,9 @@
   "walletSendDefaultFee": "Default Fee",
   "walletSendCustomFee": "Custom Fee",
   "walletSendGasPrice": "Gas Price",
+  "walletSendInvalidGasPrice": "Invalid Gas Price",
+  "walletSendInvalidGasLimit": "Invalid Gas Limit",
+  "walletSendInvalidNonce": "Invalid Nonce",
   "walletSendGasPriceGWEI": "Gas Price (GWEI)",
   "walletSendGasGWEI": "GWEI",
   "walletSendGasPriceNote": "Adjusted automatically according to network load.",
