--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -117,6 +117,7 @@
   "createWalletKeptKey": "Yes, I kept them safe",
   "createWalletDes": "Store this key phrase in a secure location. Anyone with this key phrase can access your EZChain wallet. There is no way to recover lost key phrase",
   "createWalletConfirmDes": "Confirm your passphrase backup",
+  "createWalletCopyPassphrase": "Copy Passphrase",
   "pinCodeTitle": "PIN code",
   "pinCodeConfirm": "Confirm your PIN",
   "pinCodeConfirmWrong": "PIN Code Wrong!",
