--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -265,6 +265,7 @@
   "nftCollectibleName": "Collectible Name",
   "nftCollectibleSymbol": "Collectible Symbol",
   "nftErc721ContractAddress": "ERC721 Contract Address",
+  "nftErc721NotSupport": "This ERC721 Contract does not support the required interfaces.",
   "nftEmptyCollectibles": "Issue collectibles for the families you created. You do not own any families you can mint.",
   "internet_connection_disconnected": "You are currently offline.",
   "internet_connection_connected": "Your internet connection was restored."
